--- a/package.json
+++ b/package.json
@@ -4,17 +4,24 @@
   "description": "Google Apps Script http api microframework",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "build": "vite build",
+    "test": "vitest run",
+    "pull": "clasp pull",
+    "deploy": "clasp push"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/gcanossa/gas-http-api.git"
   },
-  "keywords": [
+  "keywords": [    
     "gas",
+    "google",
+    "apps",
+    "script",
+    "google apps script",
     "api",
-    "microframework",
-    "google"
+    "rest",
+    "http"
   ],
   "author": "Gianmaria Canossa",
   "license": "MIT",
@@ -23,11 +30,9 @@
   },
   "homepage": "https://github.com/gcanossa/gas-http-api#readme",
   "devDependencies": {
-    "@jest/globals": "^29.3.1",
-    "@types/google-apps-script": "^1.0.56",
-    "jest": "^29.3.1",
-    "ts-jest": "^29.0.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "@types/google-apps-script": "^1.0.78",
+    "typescript": "^5.3.2",
+    "vite": "^5.0.6",
+    "vitest": "^1.0.1"
   }
 }
