--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,11 @@
 {
   "compilerOptions": {
-    "target": "ES2019",
-    "lib": [
-      "esnext"
-    ],
-    "allowJs": true,
+    "target": "ES2020",
+    "useDefineForClassFields": true,
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "module": "ESNext",
     "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-  },
-  "include": [
-    "src"
-, "src/index.ts"  ]
+
+    "moduleResolution": "bundler"
+  }
 }
