--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "name": "@gcanossa/gas-http-api",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Google Apps Script http api microframework",
-  "main": "dist/index.js",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    },
+    "./package.json": "./package.json"
+  },
+  "type": "module",
   "scripts": {
-    "build": "tsup",
-    "build-e2e": "vite build",
+    "build": "vite build -c vite.config.ts",
+    "build-e2e": "vite build -c vite.config.e2e.ts",
     "test": "vitest run",
     "pull": "clasp pull",
     "deploy": "clasp push"
@@ -32,9 +39,9 @@
   "homepage": "https://github.com/gcanossa/gas-http-api#readme",
   "devDependencies": {
     "@types/google-apps-script": "^1.0.78",
-    "tsup": "^8.0.1",
     "typescript": "^5.3.2",
     "vite": "^5.0.6",
+    "vite-plugin-dts": "^3.7.0",
     "vitest": "^1.0.1"
   }
 }
